# delphi-call-graph

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
backend/: __main__.py  cli.py  main.py  requirements.txt
backend/analyzer/: call_graph.py  complexity.py  models.py
backend/api/: routes.py  state.py
backend/parser/: dpr_parser.py  pas_parser.py  tokenizer.py
backend/tests/: conftest.py  test_api.py  test_call_graph.py  test_complexity.py  test_dpr_parser.py  test_pas_parser.py  test_performance.py  test_tokenizer.py
docs/: ARCHITECTURE.md
docs/evidence/: CI-RESULTS.md  COVERAGE-REPORT.md  DEMO-OUTPUT.md  LINT-REPORT.md  USABILITY-TEST.md  UX-ITERATIONS.md
docs/sprints/: SPRINT-1.md  SPRINT-2.md  SPRINT-3.md  SPRINT-4.md  SPRINT-5.md  SPRINT-6.md  SPRINT-7.md
e2e/: analysis.spec.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CallGraph.test.tsx  CallGraph.tsx  ComplexityMap.test.tsx  ComplexityMap.tsx  MethodDetail.test.tsx  MethodDetail.tsx  MethodTable.test.tsx  MethodTable.tsx  ProjectInput.test.tsx  ProjectInput.tsx  StatusBadge.tsx  SummaryCards.test.tsx  SummaryCards.tsx  UnitChart.test.tsx  UnitChart.tsx
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
samples/: SampleApp.dpr
samples/src/: DataModule.pas  MainUnit.pas  Utils.pas
